# ChemFlow

./: .gitignore  CMakeLists.txt  Makefile  README.md  chemflow_parallel  chemflow_serial  chemflow_thread
batch/: batch.c
examples/: plotOmega.py
examples/EthanolFlame/: input.txt
examples/EthanolFlame/data/: log
examples/KeroseneFlame/: input.txt
examples/KeroseneFlame/chemkin/: chem.inp
examples/MethaneFlame/: input.txt
src/: ChemThermo.cpp  ChemThermo.h  createFields.H  lininterp.cpp  lininterp.h  main.cpp  reaction_dispatch.h
src/ChemThermo/: CMakeLists.txt
test/: tdmaTest.cpp
